--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
             
 <h2>7. Personalized Accessories</h2>
 <p>Make your room unique with personalized touches such as:</p>
-<h2>Monogrammed bedding or cushions</h2>
-<h2>Customized name signs</h2>
-<h2>Handmade DIY crafts that reflect your style</h2>
+<p>Monogrammed bedding or cushions, Customized name signs, Handmade DIY crafts that reflect your style</p>
 <h2>8. Lighting Matters</h2>
 <p>Proper lighting can make all the difference in setting the mood. A chandelier, cute bedside lamps, or LED strip lights can create a warm and inviting atmosphere. Dim lighting options allow you to switch between bright and cozy settings as needed.</p>
 <h2>9. Girly Desk Setup</h2>
